# planning_service

./: .dockerignore  .env.example  .gitignore  .rsync-exclude  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  planning_entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt  update_requirements.sh
nginx/: default.conf
src/app_auth/: admin.py  apps.py  dj_signals.py  models.py  urls.py  views.py
src/app_auth/management/commands/: fake_users.py  initadmin.py
src/app_auth/migrations/: 0001_initial.py
src/app_plan/: admin.py  apps.py  forms.py  formsets.py  models.py  serializers.py  urls.py  views.py
src/app_plan/migrations/: 0001_initial.py
src/core/: base_model.py  settings.py  urls.py
